[gd_scene load_steps=11 format=3 uid="uid://csp4utnaq7gbx"]

[ext_resource type="Script" uid="uid://b07gkt718uf3a" path="res://menus/character_sheet.gd" id="1_cowgy"]
[ext_resource type="Texture2D" uid="uid://ci1asotexskrs" path="res://resources/materials/paper/Color.jpg" id="1_m6bt1"]
[ext_resource type="LabelSettings" uid="uid://21v7e3lc7vnt" path="res://menus/hud/police/Text.tres" id="3_hth0a"]
[ext_resource type="LabelSettings" uid="uid://lhfmbkrdk0jr" path="res://menus/hud/police/Numbers.tres" id="4_b202a"]
[ext_resource type="Texture2D" uid="uid://cjl5okoqk75mo" path="res://menus/exp.png" id="5_626cv"]
[ext_resource type="Texture2D" uid="uid://c3v37wfum4yv0" path="res://menus/arabesque.png" id="5_er84u"]
[ext_resource type="LabelSettings" uid="uid://bhfby7nb070i8" path="res://menus/hud/police/BigText.tres" id="6_2qnim"]
[ext_resource type="Texture2D" uid="uid://dtwvlyipq5myu" path="res://menus/character_sheet_foreground.png" id="6_fucs0"]
[ext_resource type="Texture2D" uid="uid://ggnsrfledgik" path="res://menus/separator.png" id="7_bhdlf"]
[ext_resource type="LabelSettings" uid="uid://bfkw6t3d0nqc2" path="res://menus/hud/police/SmallText.tres" id="7_m5546"]

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cowgy")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_m6bt1")

[node name="Mutable" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Classes" type="Control" parent="Mutable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainClass" type="TextureRect" parent="Mutable/Classes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.046
anchor_right = 0.077
anchor_bottom = 0.176
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="SubClass" type="TextureRect" parent="Mutable/Classes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.046
anchor_right = 0.154
anchor_bottom = 0.177
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="SpecClass" type="TextureRect" parent="Mutable/Classes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.157
anchor_top = 0.045
anchor_right = 0.231
anchor_bottom = 0.177
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Race" type="TextureRect" parent="Mutable/Classes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.235
anchor_top = 0.046
anchor_right = 0.308
anchor_bottom = 0.176
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="MainNode" type="Control" parent="Mutable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Mutable/MainNode"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.037
anchor_right = 0.5
anchor_bottom = 0.037
grow_horizontal = 2
grow_vertical = 2
text = "Shayal Kahazar"
label_settings = ExtResource("3_hth0a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="Mutable/MainNode"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.135
anchor_right = 0.5
anchor_bottom = 0.135
grow_horizontal = 2
grow_vertical = 2
text = "666"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ways" type="Control" parent="Mutable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Origin" type="TextureRect" parent="Mutable/Ways"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.694
anchor_top = 0.046
anchor_right = 0.768
anchor_bottom = 0.177
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Culture" type="TextureRect" parent="Mutable/Ways"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.046
anchor_right = 0.845
anchor_bottom = 0.176
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Religion" type="TextureRect" parent="Mutable/Ways"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.848
anchor_top = 0.046
anchor_right = 0.922
anchor_bottom = 0.176
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Profession" type="TextureRect" parent="Mutable/Ways"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.925
anchor_top = 0.046
anchor_right = 0.999
anchor_bottom = 0.177
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="MainStats" type="Control" parent="Mutable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Strength" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.378
anchor_top = 0.351
anchor_right = 0.378
anchor_bottom = 0.351
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Threshold" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.335
anchor_right = 0.501
anchor_bottom = 0.335
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transcendence" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.623
anchor_top = 0.354
anchor_right = 0.623
anchor_bottom = 0.354
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shield" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.633
anchor_top = 0.57
anchor_right = 0.633
anchor_bottom = 0.57
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attunement" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.622
anchor_top = 0.787
anchor_right = 0.622
anchor_bottom = 0.787
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.805
anchor_right = 0.5
anchor_bottom = 0.805
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flow" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.379
anchor_top = 0.784
anchor_right = 0.379
anchor_bottom = 0.784
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.368
anchor_top = 0.57
anchor_right = 0.368
anchor_bottom = 0.57
grow_horizontal = 2
grow_vertical = 2
text = "750"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RawPower" type="Label" parent="Mutable/MainStats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.57
anchor_right = 0.5
anchor_bottom = 0.57
grow_horizontal = 2
grow_vertical = 2
text = "9000"
label_settings = ExtResource("4_b202a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubStats" type="VBoxContainer" parent="Mutable"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.236
anchor_right = 0.3
anchor_bottom = 0.882
grow_horizontal = 2
grow_vertical = 2

[node name="Resources" type="VBoxContainer" parent="Mutable/SubStats"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="Mutable/SubStats/Resources"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="TextureRect" parent="Mutable/SubStats/Resources/Title"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_er84u")

[node name="Label" type="Label" parent="Mutable/SubStats/Resources/Title"]
layout_mode = 2
size_flags_horizontal = 6
text = "Resources"
label_settings = ExtResource("6_2qnim")

[node name="Right" type="TextureRect" parent="Mutable/SubStats/Resources/Title"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_er84u")

[node name="Content" type="HBoxContainer" parent="Mutable/SubStats/Resources"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Names" type="VBoxContainer" parent="Mutable/SubStats/Resources/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Shield" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Shield"
label_settings = ExtResource("7_m5546")

[node name="Health" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Health"
label_settings = ExtResource("7_m5546")

[node name="Mana" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mana"
label_settings = ExtResource("7_m5546")

[node name="Soulburn" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Soulburn"
label_settings = ExtResource("7_m5546")

[node name="Hunger" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hunger"
label_settings = ExtResource("7_m5546")

[node name="Thirst" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Thirst"
label_settings = ExtResource("7_m5546")

[node name="Stamina" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Stamina
"
label_settings = ExtResource("7_m5546")

[node name="Sanity" type="Label" parent="Mutable/SubStats/Resources/Content/Names"]
layout_mode = 2
size_flags_horizontal = 0
text = "Sanity"
label_settings = ExtResource("7_m5546")

[node name="Values" type="VBoxContainer" parent="Mutable/SubStats/Resources/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Shield" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "750 / 750"
label_settings = ExtResource("7_m5546")

[node name="Health" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "750 / 750"
label_settings = ExtResource("7_m5546")

[node name="Mana" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "750 / 750"
label_settings = ExtResource("7_m5546")

[node name="Soulburn" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "750 / 750"
label_settings = ExtResource("7_m5546")

[node name="Hunger" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="Thirst" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="Stamina" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="Sanity" type="Label" parent="Mutable/SubStats/Resources/Content/Values"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="Secondary" type="VBoxContainer" parent="Mutable/SubStats"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="Mutable/SubStats/Secondary"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="TextureRect" parent="Mutable/SubStats/Secondary/Title"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_er84u")

[node name="Label" type="Label" parent="Mutable/SubStats/Secondary/Title"]
layout_mode = 2
size_flags_horizontal = 6
text = "Secondary"
label_settings = ExtResource("6_2qnim")

[node name="Right" type="TextureRect" parent="Mutable/SubStats/Secondary/Title"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_er84u")

[node name="Content" type="HBoxContainer" parent="Mutable/SubStats/Secondary"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Names1" type="VBoxContainer" parent="Mutable/SubStats/Secondary/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Size" type="Label" parent="Mutable/SubStats/Secondary/Content/Names1"]
layout_mode = 2
size_flags_horizontal = 0
text = "Size"
label_settings = ExtResource("7_m5546")

[node name="Cloaking" type="Label" parent="Mutable/SubStats/Secondary/Content/Names1"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cloaking"
label_settings = ExtResource("7_m5546")

[node name="GlobalSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Names1"]
layout_mode = 2
size_flags_horizontal = 0
text = "Global Speed"
label_settings = ExtResource("7_m5546")

[node name="MovementSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Names1"]
layout_mode = 2
size_flags_horizontal = 0
text = "Movement Speed"
label_settings = ExtResource("7_m5546")

[node name="HandActionSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Names1"]
layout_mode = 2
size_flags_horizontal = 0
text = "Hand Speed"
label_settings = ExtResource("7_m5546")

[node name="Values1" type="VBoxContainer" parent="Mutable/SubStats/Secondary/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Size" type="Label" parent="Mutable/SubStats/Secondary/Content/Values1"]
layout_mode = 2
size_flags_horizontal = 8
text = "0.3"
label_settings = ExtResource("7_m5546")

[node name="Cloaking" type="Label" parent="Mutable/SubStats/Secondary/Content/Values1"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("7_m5546")

[node name="GlobalSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Values1"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="MovementSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Values1"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="HandActionSpeed" type="Label" parent="Mutable/SubStats/Secondary/Content/Values1"]
layout_mode = 2
size_flags_horizontal = 8
text = "100%"
label_settings = ExtResource("7_m5546")

[node name="Separator" type="TextureRect" parent="Mutable/SubStats/Secondary/Content"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("7_bhdlf")

[node name="Names2" type="VBoxContainer" parent="Mutable/SubStats/Secondary/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VisionPower" type="Label" parent="Mutable/SubStats/Secondary/Content/Names2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Vision Power"
label_settings = ExtResource("7_m5546")

[node name="VisionRange" type="Label" parent="Mutable/SubStats/Secondary/Content/Names2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Vision Range"
label_settings = ExtResource("7_m5546")

[node name="DetectionRange" type="Label" parent="Mutable/SubStats/Secondary/Content/Names2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Detection Range"
label_settings = ExtResource("7_m5546")

[node name="Values2" type="VBoxContainer" parent="Mutable/SubStats/Secondary/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VisionPower" type="Label" parent="Mutable/SubStats/Secondary/Content/Values2"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("7_m5546")

[node name="VisionRange" type="Label" parent="Mutable/SubStats/Secondary/Content/Values2"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("7_m5546")

[node name="DetectionRange" type="Label" parent="Mutable/SubStats/Secondary/Content/Values2"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("7_m5546")

[node name="Competences" type="Control" parent="Mutable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Experience" type="TextureProgressBar" parent="Mutable"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.947
anchor_right = 0.9
anchor_bottom = 0.97
max_value = 1000.0
value = 500.0
nine_patch_stretch = true
texture_progress = ExtResource("5_626cv")

[node name="Foreground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_fucs0")
expand_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
